// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component -> BlogPagination should have first link active if no match 1`] = `
<div
  class="ui pagination menu"
>
  <div
    class="active item"
    style="cursor:pointer"
    to="/blog/page/1/"
  >
    1
  </div>
  <div
    class="item"
    style="cursor:pointer"
    to="/blog/page/2/"
  >
    2
  </div>
  <div
    class="item"
    style="cursor:pointer"
    to="/blog/page/3/"
  >
    3
  </div>
  <div
    class="disabled item"
  >
    ...
  </div>
  <div
    class="item"
    style="cursor:pointer"
    to="/blog/page/10/"
  >
    10
  </div>
</div>
`;

exports[`component -> BlogPagination should render correctly 5 pages 1`] = `
<div
  class="ui pagination menu"
>
  <div
    class="item"
    style="cursor:pointer"
    to="/blog/page/1/"
  >
    1
  </div>
  <div
    class="active item"
    style="cursor:pointer"
    to="/blog/page/2/"
  >
    2
  </div>
  <div
    class="item"
    style="cursor:pointer"
    to="/blog/page/3/"
  >
    3
  </div>
  <div
    class="item"
    style="cursor:pointer"
    to="/blog/page/4/"
  >
    4
  </div>
  <div
    class="item"
    style="cursor:pointer"
    to="/blog/page/5/"
  >
    5
  </div>
</div>
`;

exports[`component -> BlogPagination should render correctly 10 pages 1`] = `
<div
  class="ui pagination menu"
>
  <div
    class="item"
    style="cursor:pointer"
    to="/blog/page/1/"
  >
    1
  </div>
  <div
    class="disabled item"
  >
    ...
  </div>
  <div
    class="item"
    style="cursor:pointer"
    to="/blog/page/3/"
  >
    3
  </div>
  <div
    class="item"
    style="cursor:pointer"
    to="/blog/page/4/"
  >
    4
  </div>
  <div
    class="active item"
    style="cursor:pointer"
    to="/blog/page/5/"
  >
    5
  </div>
  <div
    class="item"
    style="cursor:pointer"
    to="/blog/page/6/"
  >
    6
  </div>
  <div
    class="item"
    style="cursor:pointer"
    to="/blog/page/7/"
  >
    7
  </div>
  <div
    class="disabled item"
  >
    ...
  </div>
  <div
    class="item"
    style="cursor:pointer"
    to="/blog/page/10/"
  >
    10
  </div>
</div>
`;

exports[`component -> BlogPagination should render correctly 20 pages 1`] = `
<div
  class="ui pagination menu"
>
  <div
    class="item"
    style="cursor:pointer"
    to="/blog/page/1/"
  >
    1
  </div>
  <div
    class="disabled item"
  >
    ...
  </div>
  <div
    class="item"
    style="cursor:pointer"
    to="/blog/page/3/"
  >
    3
  </div>
  <div
    class="item"
    style="cursor:pointer"
    to="/blog/page/4/"
  >
    4
  </div>
  <div
    class="active item"
    style="cursor:pointer"
    to="/blog/page/5/"
  >
    5
  </div>
  <div
    class="item"
    style="cursor:pointer"
    to="/blog/page/6/"
  >
    6
  </div>
  <div
    class="item"
    style="cursor:pointer"
    to="/blog/page/7/"
  >
    7
  </div>
  <div
    class="disabled item"
  >
    ...
  </div>
  <div
    class="item"
    style="cursor:pointer"
    to="/blog/page/20/"
  >
    20
  </div>
</div>
`;

exports[`component -> BlogPagination should render nothing if only 1 page 1`] = `null`;
